# blank-project

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
alembic/: env.py
blank_project/: main.py
tests/: test_main.py
